@@ -1,8 +1,11 @@
-/* Licensed under the Apache License, Version 2.0 (the "License");
+/*
+ * Copyright © 2013-2018 camunda services GmbH and various authors (info@camunda.com)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -12,8 +15,8 @@
  */
 package org.camunda.bpm.engine.impl.variable.serializer;
 
-import javax.xml.bind.DatatypeConverter;
 import org.camunda.bpm.engine.ProcessEngineException;
+import org.camunda.bpm.engine.impl.digest._apacheCommonsCodec.Base64;
 import org.camunda.bpm.engine.impl.util.StringUtil;
 import org.camunda.bpm.engine.variable.impl.value.UntypedValueImpl;
 import org.camunda.bpm.engine.variable.type.SerializableValueType;
@@ -104,7 +107,7 @@ public abstract class AbstractSerializableValueSerializer<T extends Serializable
   protected String getSerializedStringValue(byte[] serializedByteValue) {
     if(serializedByteValue != null) {
       if(!isSerializationTextBased()) {
-        return DatatypeConverter.printBase64Binary(serializedByteValue);
+        serializedByteValue = Base64.encodeBase64(serializedByteValue);
       }
       return StringUtil.fromBytes(serializedByteValue);
     }
@@ -115,11 +118,9 @@ public abstract class AbstractSerializableValueSerializer<T extends Serializable
 
   protected byte[] getSerializedBytesValue(String serializedStringValue) {
     if(serializedStringValue != null) {
-      byte[] serializedByteValue = null;
+      byte[] serializedByteValue = StringUtil.toByteArray(serializedStringValue);
       if (!isSerializationTextBased()) {
-        serializedByteValue = DatatypeConverter.parseBase64Binary(serializedStringValue);
-      } else {
-        serializedByteValue = StringUtil.toByteArray(serializedStringValue);
+        serializedByteValue = Base64.decodeBase64(serializedByteValue);
       }
       return serializedByteValue;
     }
